<?xml version="1.0"?>
<package format="2">
  <name>hamal_ff_client</name>
  <version>0.0.0</version>
  <description>The hamal_ff_client package</description>

  <maintainer email="cenkcetix@gmail.com">cenk</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>bt_amr</build_depend>
  <exec_depend>bt_amr</exec_depend>

  <export>
  </export>
</package>
